--- a/MoonBookWeb/appsettings.json
+++ b/MoonBookWeb/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MoonBookDb": "Data Source=(LocalDB)\\MSSQLLocalDB;AttachDbFilename=D:\\Проекты\\MoonBook\\Server\\DbaseMB.mdf;Integrated Security=True"
+    "MoonBookDb": "Data Source=(LocalDB)\\MSSQLLocalDB;AttachDbFilename=D:\\Проекты\\MoonBookWeb\\MoonBookWeb\\DbaseMB.mdf;Integrated Security=True"
   }
 }
