--- a/MoonBookWeb/MoonBookWeb.csproj
+++ b/MoonBookWeb/MoonBookWeb.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="EpubSharp.dll" Version="1.1.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.6">
@@ -18,6 +19,7 @@
   <ItemGroup>
     <Folder Include="wwwroot\icons\" />
     <Folder Include="wwwroot\img_post\" />
+    <Folder Include="wwwroot\cover_img\" />
   </ItemGroup>
 
 </Project>
