--- a/MoonBookWeb/MoonBookWeb.csproj
+++ b/MoonBookWeb/MoonBookWeb.csproj
@@ -7,6 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="wwwroot\js\library.js" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <_ContentIncludedByDefault Remove="wwwroot\js\library.js" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="EpubSharp.dll" Version="1.1.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.6" />
@@ -18,6 +26,10 @@
 
   <ItemGroup>
     <Folder Include="wwwroot\icons\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="wwwroot\js\library.js" />
   </ItemGroup>
 
 </Project>
