--- a/MoonBookWeb/MoonBookWeb.csproj
+++ b/MoonBookWeb/MoonBookWeb.csproj
@@ -11,6 +11,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Remove="API\fsci5kpl.khk~" />
+  </ItemGroup>
+
+  <ItemGroup>
     <_ContentIncludedByDefault Remove="wwwroot\js\library.js" />
   </ItemGroup>
 
